# CADomatic

./: README.md  llm_client.py  main.py  pyproject.toml  requirements.txt  run_freecad.py
prompts/: base_instruction.txt
src/: llm_client.py  rag_builder.py  run_freecad.py
